--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -18,6 +18,7 @@ footer {
 
 .footer-links {
     color: #c6c6c6;
+    margin: 0 0;
     &:hover {
         color: white;
     }
@@ -30,6 +31,7 @@ footer {
     justify-content: flex-start;
     width: 100px;
     flex-wrap: nowrap;
+    margin-bottom: 5px;
 }
 
 .media-icon {
